--- a/Environnement.ipynb
+++ b/Environnement.ipynb
@@ -2,6 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
@@ -60,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,12 +82,21 @@
     "        for link in self.links:\n",
     "            link.update_travel_time()\n",
     "        for path in self.paths:\n",
-    "            path.update_travel_time()"
+    "            path.update_travel_time()\n",
+    "            \n",
+    "    def update_av(self, avs):\n",
+    "        for path in self.paths:\n",
+    "            path.flow = 0\n",
+    "        for av in avs:\n",
+    "            av.path.flow += av.flow\n",
+    "        self.update()\n",
+    "        for av in avs:\n",
+    "            av.give_reward()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -161,6 +179,141 @@
     "braess.update()\n",
     "print([path.get_travel_time() for path in braess.paths])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class autonomous_vehicle:\n",
+    "    p = 0.5\n",
+    "    def __init__(self, name, flow):\n",
+    "        self.name = name\n",
+    "        self.path = None\n",
+    "        self.reward = 0\n",
+    "        self.flow = flow\n",
+    "    \n",
+    "    def path_choice(self, path):\n",
+    "        if self.path == None:\n",
+    "            self.path = path\n",
+    "        self.path = (path if np.random.rand() < self.p else self.path)\n",
+    "    \n",
+    "    def give_reward(self):\n",
+    "        self.reward = - self.path.get_travel_time()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "av1 = autonomous_vehicle('1', 25)\n",
+    "av2 = autonomous_vehicle('2', 25)\n",
+    "av3 = autonomous_vehicle('3', 25)\n",
+    "av4 = autonomous_vehicle('4', 25)\n",
+    "\n",
+    "avs = [av1, av2, av3, av4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best_path = [x for _,x in sorted([(path.get_travel_time(),path) for path in braess.paths],  key=lambda tup: tup[0])][0]\n",
+    "for av in avs:\n",
+    "    av.path_choice(best_path)\n",
+    "\n",
+    "braess.update_av(avs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-3.75, -3.75, -3.25, -3.75]\n",
+      "[3.75, 3.25, 3.25]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print([av.reward for av in avs])\n",
+    "print([path.get_travel_time() for path in braess.paths])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unorderable types: path() < path()",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-120-665639bcc52f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;34m[\u001b[0m\u001b[0mx\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0m_\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0msorted\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_travel_time\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mpath\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mbraess\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpaths\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: unorderable types: path() < path()"
+     ]
+    }
+   ],
+   "source": [
+    "[x for _,x in sorted([(path.get_travel_time(),path) for path in braess.paths])][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unorderable types: path() < path()",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-122-c5cdbd8e749d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msorted\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_travel_time\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mpath\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mbraess\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpaths\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: unorderable types: path() < path()"
+     ]
+    }
+   ],
+   "source": [
+    "print(sorted([(path.get_travel_time(),path) for path in braess.paths]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(3.25, <__main__.path object at 0x11193a4e0>), (3.25, <__main__.path object at 0x11193a358>), (3.75, <__main__.path object at 0x11193a320>)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sorted([(path.get_travel_time(), path) for path in braess.paths],  key=lambda tup: tup[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
