--- a/Environnement.ipynb
+++ b/Environnement.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,6 +197,8 @@
     "    def path_choice(self, path):\n",
     "        if self.path == None:\n",
     "            self.path = path\n",
+    "        # the following condition makes the system converges toward Nash\n",
+    "        self.p = abs(self.path.get_travel_time() - path.get_travel_time()) / self.path.get_travel_time()\n",
     "        self.path = (path if np.random.rand() < self.p else self.path)\n",
     "    \n",
     "    def give_reward(self):\n",
@@ -205,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,34 +221,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
-    "best_path = [x for _,x in sorted([(path.get_travel_time(),path) for path in braess.paths],  key=lambda tup: tup[0])][0]\n",
-    "for av in avs:\n",
-    "    av.path_choice(best_path)\n",
+    "for i in range(10000):\n",
+    "    best_path = [x for _,x in sorted([(path.get_travel_time(),path) for path in braess.paths],  key=lambda tup: tup[0])][0]\n",
+    "    #print([(str(path), path.flow, path.get_travel_time()) for path in braess.paths])\n",
+    "    #print(av2.p)\n",
+    "    for av in avs:\n",
+    "        av.path_choice(best_path)\n",
     "\n",
-    "braess.update_av(avs)"
+    "    braess.update_av(avs)\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-3.75, -3.25, -3.75, -3.75]\n",
-      "[3.25, 3.75, 3.25]\n"
+      "['abd', 'abcd', 'acd', 'abcd']\n",
+      "[('abd', 25, 3.75), ('acd', 25, 3.75), ('abcd', 50, 3.75)]\n"
      ]
     }
    ],
    "source": [
-    "print([av.reward for av in avs])\n",
-    "print([path.get_travel_time() for path in braess.paths])"
+    "print([str(av.path) for av in avs])\n",
+    "print([(str(path), path.flow, path.get_travel_time()) for path in braess.paths])"
    ]
   },
   {
