--- a/Environnement.ipynb
+++ b/Environnement.ipynb
@@ -182,12 +182,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
     "class autonomous_vehicle:\n",
-    "    p = 0.5\n",
+    "    # p = 0.5\n",
     "    def __init__(self, name, flow):\n",
     "        self.name = name\n",
     "        self.path = None\n",
@@ -198,16 +198,18 @@
     "        if self.path == None:\n",
     "            self.path = path\n",
     "        # the following condition makes the system converges toward Nash\n",
-    "        self.p = abs(self.path.get_travel_time() - path.get_travel_time()) / self.path.get_travel_time()\n",
-    "        self.path = (path if np.random.rand() < self.p else self.path)\n",
+    "        # change this condition to make an faster convergence toward Nash\n",
+    "        p = abs(self.path.get_travel_time() - path.get_travel_time()) / self.path.get_travel_time()\n",
+    "        self.path = (path if np.random.rand() < p else self.path)\n",
     "    \n",
     "    def give_reward(self):\n",
+    "        # add here a NN which choose the path given the reward\n",
     "        self.reward = - self.path.get_travel_time()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,11 +223,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(10000):\n",
+    "for i in range(1000):\n",
     "    best_path = [x for _,x in sorted([(path.get_travel_time(),path) for path in braess.paths],  key=lambda tup: tup[0])][0]\n",
     "    #print([(str(path), path.flow, path.get_travel_time()) for path in braess.paths])\n",
     "    #print(av2.p)\n",
@@ -238,14 +240,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['abd', 'abcd', 'acd', 'abcd']\n",
+      "['acd', 'abcd', 'abcd', 'abd']\n",
       "[('abd', 25, 3.75), ('acd', 25, 3.75), ('abcd', 50, 3.75)]\n"
      ]
     }
@@ -253,6 +255,17 @@
    "source": [
     "print([str(av.path) for av in avs])\n",
     "print([(str(path), path.flow, path.get_travel_time()) for path in braess.paths])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 239,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for av in avs:\n",
+    "    av.path = acd\n",
+    "braess.update_av(avs)"
    ]
   },
   {
