--- a/Environnement.ipynb
+++ b/Environnement.ipynb
@@ -55,6 +55,7 @@
     "        for link in links:\n",
     "            link.add_path(self)\n",
     "    \n",
+    "    # add the marginal cost to see if you converge to the social optimum\n",
     "    def get_travel_time(self):\n",
     "        return self._travel_time\n",
     "    \n",
@@ -182,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,14 +241,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['acd', 'abcd', 'abcd', 'abd']\n",
+      "['acd', 'abcd', 'abd', 'abcd']\n",
       "[('abd', 25, 3.75), ('acd', 25, 3.75), ('abcd', 50, 3.75)]\n"
      ]
     }
@@ -259,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
