Starting Routing Env

--- a/Environment.ipynb
+++ b/Environment.ipynb
@@ -16,6 +16,8 @@
    "outputs": [],
    "source": [
     "class link:\n",
+    "    \"\"\"\n",
+    "    \"\"\"\n",
     "    def __init__(self, name, a0, a1):\n",
     "        self.name = name\n",
     "        self.travel_time = 0 # the travel time of the link\n",
@@ -47,6 +49,17 @@
    "outputs": [],
    "source": [
     "class path:\n",
+    "    \"\"\"\n",
+    "    Notes: \n",
+    "     - We should add a method that \"adds a car/updates the flow\" to a path. \n",
+    "       This should include the update_travel_time method.\n",
+    "     - The travel time of each path shouldn't start at 0, since each path always has some base travel time.\n",
+    "       Have the initial travel times of the path be when the congestion is 0. \n",
+    "     - When you \"update the travel time\", add what the travel time of each road would be given\n",
+    "       the path's current flow.\n",
+    "       Maybe each link in the path should only have a function that calculates it's travel time\n",
+    "       given a flow on that link.\n",
+    "    \"\"\"\n",
     "    def __init__(self, name, links):\n",
     "        self.name = name\n",
     "        self._travel_time = 0 # the travel time of the paths\n",
@@ -272,11 +285,94 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Environment Description\n",
+    "The environment\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## Routing Environment \n",
+    "class RoutingEnv():\n",
+    "    \"\"\"A partially observed routing environment in which cars are choosing routing paths each day.\n",
+    "    \n",
+    "    States\n",
+    "        The states (what's observed) are the number of cars on each path and messages from others. \n",
+    "    Actions\n",
+    "        Actions are the path choice for each vehicle and the communication among them.\n",
+    "    Rewards\n",
+    "        Each vehicle's goal is to minimize their own travel time and eventually reduce their marginal cost of \n",
+    "        their choices on each driver. Thus, the cost function is: \n",
+    "            (1) the amount of time on your own route \n",
+    "            (2) the cost of your route choice on the other drivers \n",
+    "                    (how much the travel times of other drivers has increased.\n",
+    "    Termination\n",
+    "        A rollout is terminated if the time horizon is reached.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        \"\"\"A routing environment should consist of a road network.\"\"\"\n",
+    "        # Create the roads\n",
+    "        ab = link('ab', 1, 1/100)\n",
+    "        ac = link('ac', 2, 0)\n",
+    "        bc = link('bc', 0.25, 0)\n",
+    "        bd = link('bd', 2, 0)\n",
+    "        cd = link('cd', 1, 1/100)\n",
+    "        roads = [ab, ac, bc, bd, cd]\n",
+    "        \n",
+    "        # Create the possible routes\n",
+    "        abcd = path('abcd', [ab, bc, cd])\n",
+    "        abd = path('abd', [ab, bd])\n",
+    "        acd = path('acd', [ac, cd])\n",
+    "        paths = [abd, acd, abcd]\n",
+    "        \n",
+    "        # Put the roads and the routes in a network\n",
+    "        town = network(paths, links)\n",
+    "        return\n",
+    "    \n",
+    "    @property\n",
+    "    def action_space(self):\n",
+    "        ##############################################################\n",
+    "        # specify dimensions and properties of the action space here #\n",
+    "        ##############################################################\n",
+    "        return  ### FILL IN ###\n",
+    "\n",
+    "    @property\n",
+    "    def observation_space(self):\n",
+    "        #############################################################\n",
+    "        # specify dimensions and properties of the state space here #\n",
+    "        #############################################################\n",
+    "        return  ### FILL IN ###\n",
+    "    \n",
+    "    def get_state(self, **kwargs):\n",
+    "        ####################################\n",
+    "        # specify desired state space here #\n",
+    "        ####################################\n",
+    "    \n",
+    "    def reset(self):\n",
+    "        \"\"\"Restarts the environment.\"\"\"\n",
+    "        return obs_dict\n",
+    "    \n",
+    "    def step(self, actions):\n",
+    "        \"\"\"Moves the environment forward one step by applying the actions of the agents.\"\"\"\n",
+    "        for agent, rl_action in action.items():\n",
+    "            # Apply the action\n",
+    "            # Compute the rewards \n",
+    "            # Get the next state\n",
+    "        return\n",
+    "        \n",
+    "    def compute_reward(self, state, rl_actions, **kwargs):\n",
+    "        \"\"\"Computes the reward of each action for the current state.\"\"\"\n",
+    "        return \n",
+    "\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
@@ -295,7 +391,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.5"
   },
   "widgets": {
    "state": {},
