add the interface

--- a/Environment.ipynb
+++ b/Environment.ipynb
@@ -96,15 +96,15 @@
     "            \n",
     "    Reward:\n",
     "        Reward for each car is determined by the following formula: \n",
-    "        marginal_cost = d[x_e*t(x_e)]/d[x_e]\n",
-    "        Cost = (1-λ)route_travel_time + λ(marginal_cost)\n",
+    "        marginal_cost = d[t(x_e)]/d[x_e]\n",
+    "        Cost = route_travel_time + λ(marginal_cost)\n",
     "        Reward = -Cost\n",
     "        ***\n",
     "        route_travel_time: Travel time of the route previously taken by the car\n",
     "        marginal_cost: Cost that the car's route choice imposes on everyone else. \n",
     "                       The formula above captures the change in the travel flow \n",
     "                       with respect to the change in vehicle flow on a given road.\n",
-    "        λ: Weight Toward Social Good\n",
+    "        λ: Weight Toward Social Good (between 0 and 1)\n",
     "        \n",
     "    \n",
     "    Starting State:\n",
@@ -139,8 +139,8 @@
     "        self.preprocessor = DictFlatteningPreprocessor(Dict(obs_spaces))\n",
     "        self.observation_space = self.preprocessor.observation_space\n",
     "        # Make the action space\n",
-    "        self.action_space = Discrete(self.num_paths)\n",
-    "      \n",
+    "        self.action_space = Discrete(self.num_paths) # int between 0 and num_paths-1\n",
+    "\n",
     "    def get_state(self, **kwargs):\n",
     "        return self.state\n",
     "    \n",
@@ -163,22 +163,74 @@
     "        obs_dict, rew_dict, done, info_dict = {}, {}, {}, {}\n",
     "        \n",
     "        # Apply the actions of every agent at the same time\n",
+    "        paths_flow_dict = {}\n",
     "        for agent, rl_action in action_dict.items():\n",
-    "          # TO-DO: COMPLETE WHEN NETWORK CLASS IS INCORPORATE\n",
-    "          continue\n",
+    "            \"\"\"\n",
+    "            agent is one string that represent the id of the agent\n",
+    "            rl_action is one number that represent the path choice of the agent,\n",
+    "            rl_action should be a int between 0 and nb_paths-1\n",
     "            \n",
+    "            we built a dictionnary paths_flow_dict that store the path flow on every path\n",
+    "            \"\"\"\n",
+    "            assert type(rl_action) == int and rl_action > -1 and rl_action < network.nb_paths\n",
+    "            if rl_action in paths_flow_dict:\n",
+    "                paths_flow_dict[\"paths_flow_dict\"] += 1\n",
+    "            else:\n",
+    "                paths_flow_dict[\"paths_flow_dict\"] = 1\n",
+    "\n",
+    "        \"\"\"\n",
+    "        update the path flow of the network\n",
+    "        In the class network define:\n",
+    "        def update_flow_from_dict(self, paths_flow_dict):\n",
+    "            for p in paths_flow_dict.keys():\n",
+    "                path_flow[p] = paths_flow_dict[p]\n",
+    "            self.update_travel_time()\n",
+    "        \n",
+    "        def update_travel_time(self):\n",
+    "            flow_travel_time = ...\n",
+    "            \n",
+    "        \"\"\"\n",
+    "        network.update_flow_from_dict(paths_flow_dict)\n",
+    "        \n",
+    "        \n",
     "        # Calculate states, reward, and done for each agent\n",
+    "        travel_time = {}\n",
+    "        marginal_cost = {}\n",
+    "        \n",
     "        for agent, path_choice in action_dict.items():\n",
+    "            assert type(path_choice) == int and path_choice > -1 and path_choice < network.nb_paths\n",
+    "            travel_time[agent] = network.travel_time(path_choice)\n",
+    "            \"\"\"\n",
+    "            prev_time should be the travel time of the agent.\n",
+    "            This function should return the path_travel_time given the flow on the network\n",
+    "            def travel_time(self, path_choice):\n",
+    "                return path_travel_time[path_choice]\n",
+    "                \n",
+    "            marginal_cost = d[t(x_e)]/d[x_e]\n",
+    "            def marginal_cost(self, path_choice):\n",
+    "                return marginal_cost[path_choice]\n",
+    "            \"\"\"\n",
+    "            marginal_cost[agent] = network.marginal_cost(path_choice)\n",
     "            new_obs = {\n",
     "                'prev_route': path_choice,\n",
-    "                'prev_time': path_choice   # TO-DO: CHANGE THIS TO REFLECT REAL PATH TIME\n",
+    "                'prev_time': travel_time[agent]\n",
     "            }\n",
     "            obs_dict[agent] = self.preprocessor.transform(new_obs)\n",
     "            # Cost is the path_time\n",
-    "            rew_dict[agent] = -path_choice # TO-DO: CHANGE THIS! \n",
+    "            # rew_dict[agent] = reward_calculator(agent, marginal_cost)\n",
+    "            # -path_choice # TO-DO: CHANGE THIS! \n",
     "            # Set done and infos\n",
     "            done[agent] = True\n",
     "            info_dict[agent] = {}\n",
+    "        rew_dict = reward_calculator(travel_time, marginal_cost, soc_fac)\n",
+    "        \n",
+    "        \"\"\"\n",
+    "        def reward_calculator(travel_time, marginal_cost, soc_fac):\n",
+    "            rew_dict = {}\n",
+    "            for agent in travel_time.keys():\n",
+    "                rew_dict[agent] = travel_time[agent] + soc_fac * marginal_cost[agent]\n",
+    "            return rew_dict\n",
+    "        \"\"\"\n",
     "          \n",
     "        self.state = obs_dict   \n",
     "        done[\"__all__\"] = True\n",
@@ -200,10 +252,40 @@
    "outputs": [],
    "source": [
     "# Setup policies for each vehicle\n",
+    "\n",
+    "\"\"\"\n",
+    "define a function (class instantiation) which have for parameter a network name, \n",
+    "and the number of vehicles, \n",
+    "the return the num paths.\n",
+    "\n",
+    "\n",
+    "\"\"\"\n",
+    "network_name = 'Braess'\n",
+    "nb_veh = 1\n",
+    "# network init should build the Network object\n",
+    "# ----- TO DO -----: import the network class\n",
+    "network = network(network_name, nb_veh)\n",
+    "# nb_path should be a property method\n",
+    "\n",
+    "\"\"\"\n",
+    "class network:\n",
+    "    def __init__(self, network_name, nb_veh):\n",
+    "        load the network which correspond to the network_name\n",
+    "        define the nb_veh as the nb_veh\n",
+    "        from nb_veh and the intern demand define the number of flow that each veh represent\n",
+    "        also define __nb_paths to give it to the Env\n",
+    "\n",
+    "    @property\n",
+    "    def nb_paths(self):\n",
+    "        return self.__nb_paths\n",
+    "\"\"\"\n",
+    "\n",
+    "nb_path = network.nb_paths\n",
+    "\n",
     "env_config = {\n",
-    "    'network': 'Braess',\n",
-    "    'num_veh': 1,\n",
-    "    'num_paths': 2,\n",
+    "    'network': network_name,\n",
+    "    'num_veh': nb_veh,\n",
+    "    'num_paths': nb_path,\n",
     "    'soc_fac': 0.5\n",
     "}\n",
     "routing_env = RoutingEnv(env_config)\n",
@@ -262,7 +344,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.6"
   },
   "widgets": {
    "state": {},
