--- a/Environment.ipynb
+++ b/Environment.ipynb
@@ -72,6 +72,12 @@
     }
    ],
    "source": [
+    "def reward_calculator(travel_time, marginal_cost, soc_fac):\n",
+    "    rew_dict = {}\n",
+    "    for agent in travel_time.keys():\n",
+    "        rew_dict[agent] = travel_time[agent] + soc_fac * marginal_cost[agent]\n",
+    "    return rew_dict\n",
+    "\n",
     "## Routing Environment \n",
     "class RoutingEnv(MultiAgentEnv):\n",
     "    \"\"\"\n",
@@ -165,31 +171,17 @@
     "        # Apply the actions of every agent at the same time\n",
     "        paths_flow_dict = {}\n",
     "        for agent, rl_action in action_dict.items():\n",
-    "            \"\"\"\n",
-    "            agent is one string that represent the id of the agent\n",
-    "            rl_action is one number that represent the path choice of the agent,\n",
-    "            rl_action should be a int between 0 and nb_paths-1\n",
-    "            \n",
-    "            we built a dictionnary paths_flow_dict that store the path flow on every path\n",
-    "            \"\"\"\n",
+    "            # agent is one string that represent the id of the agent\n",
+    "            # rl_action is one number that represent the path choice of the agent,\n",
+    "            # rl_action should be a int between 0 and nb_paths-1\n",
     "            assert type(rl_action) == int and rl_action > -1 and rl_action < network.nb_paths\n",
+    "            # we built a dictionnary paths_flow_dict that store the path flow on every path\n",
     "            if rl_action in paths_flow_dict:\n",
-    "                paths_flow_dict[\"paths_flow_dict\"] += 1\n",
+    "                paths_flow_dict[rl_action] += 1\n",
     "            else:\n",
-    "                paths_flow_dict[\"paths_flow_dict\"] = 1\n",
+    "                paths_flow_dict[rl_action] = 1\n",
     "\n",
-    "        \"\"\"\n",
-    "        update the path flow of the network\n",
-    "        In the class network define:\n",
-    "        def update_flow_from_dict(self, paths_flow_dict):\n",
-    "            for p in paths_flow_dict.keys():\n",
-    "                path_flow[p] = paths_flow_dict[p]\n",
-    "            self.update_travel_time()\n",
-    "        \n",
-    "        def update_travel_time(self):\n",
-    "            flow_travel_time = ...\n",
-    "            \n",
-    "        \"\"\"\n",
+    "        # update the path travel times of the network given the path flows\n",
     "        network.update_flow_from_dict(paths_flow_dict)\n",
     "        \n",
     "        \n",
@@ -199,17 +191,9 @@
     "        \n",
     "        for agent, path_choice in action_dict.items():\n",
     "            assert type(path_choice) == int and path_choice > -1 and path_choice < network.nb_paths\n",
+    "            # network travel time ( path ) return the travel time of the path\n",
     "            travel_time[agent] = network.travel_time(path_choice)\n",
-    "            \"\"\"\n",
-    "            prev_time should be the travel time of the agent.\n",
-    "            This function should return the path_travel_time given the flow on the network\n",
-    "            def travel_time(self, path_choice):\n",
-    "                return path_travel_time[path_choice]\n",
-    "                \n",
-    "            marginal_cost = d[t(x_e)]/d[x_e]\n",
-    "            def marginal_cost(self, path_choice):\n",
-    "                return marginal_cost[path_choice]\n",
-    "            \"\"\"\n",
+    "            # network marginal cost ( path ) return the marginal cost of the path\n",
     "            marginal_cost[agent] = network.marginal_cost(path_choice)\n",
     "            new_obs = {\n",
     "                'prev_route': path_choice,\n",
@@ -225,11 +209,7 @@
     "        rew_dict = reward_calculator(travel_time, marginal_cost, soc_fac)\n",
     "        \n",
     "        \"\"\"\n",
-    "        def reward_calculator(travel_time, marginal_cost, soc_fac):\n",
-    "            rew_dict = {}\n",
-    "            for agent in travel_time.keys():\n",
-    "                rew_dict[agent] = travel_time[agent] + soc_fac * marginal_cost[agent]\n",
-    "            return rew_dict\n",
+    "        \n",
     "        \"\"\"\n",
     "          \n",
     "        self.state = obs_dict   \n",
@@ -253,13 +233,6 @@
    "source": [
     "# Setup policies for each vehicle\n",
     "\n",
-    "\"\"\"\n",
-    "define a function (class instantiation) which have for parameter a network name, \n",
-    "and the number of vehicles, \n",
-    "the return the num paths.\n",
-    "\n",
-    "\n",
-    "\"\"\"\n",
     "network_name = 'Braess'\n",
     "nb_veh = 1\n",
     "# network init should build the Network object\n",
@@ -268,6 +241,11 @@
     "# nb_path should be a property method\n",
     "\n",
     "\"\"\"\n",
+    "define a function (class instantiation) which have for parameter a network name, \n",
+    "and the number of vehicles, \n",
+    "the return the num paths.\n",
+    "\n",
+    "interface of the class network\n",
     "class network:\n",
     "    def __init__(self, network_name, nb_veh):\n",
     "        load the network which correspond to the network_name\n",
